[package]
name = "icao-mrtd"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
digest = { version = "0.10" }
pcsc = { version = "2.8" }
rasn = { version = "0.18" }
sha1 = { version = "0.10" }
sha2 = { version = "0.10" }
smallstr = { version = "0.3" }
smallvec = { version = "1.13", features = ["const_generics"] }
