[package]
name = "icao-mrtd"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = { version = "0.9.0-pre.2" }
block-padding = { version = "0.4.0-rc.0" }
cbc = { version = "0.2.0-pre.2" }
cipher = { version = "0.5.0-pre.7" }
cmac = { version = "0.8.0-pre.2" }
des = { version = "0.9.0-pre.2" }
digest = { version = "0.11.0-pre.9" }
pcsc = { version = "2.8" }
rand = { version = "0.8" }
rasn = { version = "0.18" }
retail-mac = { path = "../../rustcrypto-macs-devel/retail-mac" }
sha1 = { version = "0.11.0-pre.4" }
sha2 = { version = "0.11.0-pre.4" }
smallstr = { version = "0.3" }
smallvec = { version = "1.13", features = ["const_generics"] }
subtle = { version = "2.6" }

[dev-dependencies]
hex-literal = { version = "0.4" }
